# ChangeLog for app-i18n/sunpinyin
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-i18n/sunpinyin/ChangeLog,v 1.5 2011/02/20 05:02:38 qiaomuf Exp $

*sunpinyin-2.0.3 (20 Feb 2011)

  20 Feb 2011; Mu Qiao <qiaomuf@gentoo.org> +sunpinyin-2.0.3.ebuild:
  Version bump for sunpinyin wrt bug #355575

*sunpinyin-2.0.2-r1 (08 Jan 2011)

  08 Jan 2011; Mu Qiao <qiaomuf@gentoo.org> +sunpinyin-2.0.2-r1.ebuild,
  +files/sunpinyin-2.0.2-ldflags.patch:
  Fix ldflags wrt bug #351017

*sunpinyin-2.0.2 (02 Dec 2010)

  02 Dec 2010; <gentoo@gentoo.org> +sunpinyin-2.0.2.ebuild:
  Version bumped.

  04 May 2010; MATSUU Takuto <matsuu@gentoo.org> sunpinyin-2.0.1.ebuild:
  Fixed checking wrong use flag, bug #318373.

*sunpinyin-2.0.1 (04 May 2010)

  04 May 2010; MATSUU Takuto <matsuu@gentoo.org>
  -ibus-sunpinyin-2.0_rc3.ebuild, +sunpinyin-2.0.1.ebuild,
  +files/sunpinyin-2.0.1-mkdir.patch, metadata.xml:
  Version bumped. Moved from app-i18n/ibus-sunpinyin to app-i18n/sunpinyin,
  bug #314769.

*ibus-sunpinyin-2.0_rc3 (19 Nov 2009)

  19 Nov 2009; MATSUU Takuto <matsuu@gentoo.org>
  +ibus-sunpinyin-2.0_rc3.ebuild, -ibus-sunpinyin-2.0.20091104.ebuild:
  Version bumped, bug #292648. Removed old version.

*ibus-sunpinyin-2.0.20091104 (08 Nov 2009)

  08 Nov 2009; MATSUU Takuto <matsuu@gentoo.org>
  +ibus-sunpinyin-2.0.20091104.ebuild, +metadata.xml:
  Initial import, bug #288566. The ebuild was submitted by Hubert Star.
