@@ -8,6 +8,6 @@ DIST sunpinyin-2.0.3.tar.gz 169394 RMD160 b9ca794576dd71814a9b1cea33391dad3bffdc
 EBUILD sunpinyin-2.0.1.ebuild 1683 RMD160 875135675a4ad50646705cb8c89c9777334ed920 SHA1 9b565bfc5458dbdea68c62c0440b33c89dd5631f SHA256 8b57716dcb11f92b935bf2c1f4217db22d8fab44510c1424972c90bfe827475e
 EBUILD sunpinyin-2.0.2-r1.ebuild 1178 RMD160 63cb5dc81ae581f83d657d023da5b3d0980f4a6b SHA1 d9c73772f4aa37cca58199c6feacfc7a7f812c57 SHA256 eeeccddedec86a89d0f3a1951ce24188b399dc95d95a6fbac19090d6c2a12e35
 EBUILD sunpinyin-2.0.2.ebuild 1096 RMD160 146af7c95ea67513a4ec41b522412028e7c5b291 SHA1 ea69b8607017638906ec5fa76f6bb63d99e79ae9 SHA256 bca779e7c1eeab377bb1525540934b65465699748ed91d43d746f4b11a561ff2
-EBUILD sunpinyin-2.0.3.ebuild 1431 RMD160 440deb16163012a2487e31631e7de48724c4abed SHA1 9a0ffa2af62ab55a77c27b97423d7d8be7b86fa5 SHA256 2fe5ed743b796446c2ab24d55ab840399ee8bfb3949da06151472245bdfe04bb
-MISC ChangeLog 1482 RMD160 f7f3b41940ad67b62f86c5ae363573116eb62ea9 SHA1 dbd8863b298bdb049c59d6302e5051de50046218 SHA256 fb42fb98aecbf14c5e155cd224dbdcbb3a95c14996310995861d632cd56d6047
+EBUILD sunpinyin-2.0.3.ebuild 1437 RMD160 3a718923b40b856892991685c9d22030c2a15db5 SHA1 90f10edcd522b575a17283ce97490d409f8a4f37 SHA256 096296ab4ee77616d73e8ff32969a205309e660ebaf5a2e7ba327f2983f21c31
+MISC ChangeLog 1604 RMD160 618b9414cf6862dd7b4411c44571e7e123c4bcbc SHA1 5330a50dad5e462499ce24951595d95bfdd0d985 SHA256 4414304833ab9efabb58cbf2c3e43fd683cd9bfdfb2f93339a6c1aa6bc9c47fa
 MISC metadata.xml 307 RMD160 7b5210c750a70d4bd65c6ff529a6bd9ca2ec3052 SHA1 1820ca5b483e66bc6627dfe277749cd3daa47692 SHA256 84307cd50dcea4c60117927dc9e4f23c1dbfd8f73c9d1f0626f44114da0b551d
