@@ -1,6 +1,6 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-i18n/sunpinyin/sunpinyin-2.0.3.ebuild,v 1.2 2011/02/20 06:48:00 qiaomuf Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-i18n/sunpinyin/sunpinyin-2.0.3.ebuild,v 1.3 2011/02/20 13:22:37 qiaomuf Exp $
 
 EAPI="1"
 inherit scons-utils
@@ -22,8 +22,8 @@ DEPEND="${RDEPEND}
 
 src_unpack() {
 	unpack "${P}.tar.gz"
-	mv "${DISTDIR}/dict.utf8.tar.bz2" "${S}/raw/" || die "dict file not found"
-	mv "${DISTDIR}/lm_sc.t3g.arpa.tar.bz2" "${S}/raw/" || die "dict file not found"
+	ln -s "${DISTDIR}/dict.utf8.tar.bz2" "${S}/raw/" || die "dict file not found"
+	ln -s "${DISTDIR}/lm_sc.t3g.arpa.tar.bz2" "${S}/raw/" || die "dict file not found"
 }
 
 src_compile() {
