@@ -1,6 +1,9 @@
 # ChangeLog for app-i18n/sunpinyin
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-i18n/sunpinyin/ChangeLog,v 1.5 2011/02/20 05:02:38 qiaomuf Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-i18n/sunpinyin/ChangeLog,v 1.6 2011/02/20 13:22:37 qiaomuf Exp $
+
+  20 Feb 2011; Mu Qiao <qiaomuf@gentoo.org> sunpinyin-2.0.3.ebuild:
+  Fix compilation for userpriv, thanks to Alphat-PC.
 
 *sunpinyin-2.0.3 (20 Feb 2011)
 
